Fix name in quote alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,11 @@ button {
     padding-top: 80px;
     padding-bottom: 80px;
 }
+.quote .name {
+    font-weight: 900;
+    text-align: right;
+    font-size: 24px;
+}
 button, .promo  {
     background-color: #3882f6;
     color: #f9faf8;
